samples/_failures_safe/1761186781_198088_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_886150db.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_886150db.c:182:5: error: expected identifier at end of input
  182 |     for (int i = 0; i < graph->
      |     ^~~
./samples/SAFE/__tmp_886150db.c:182:5: error: expected declaration or statement at end of input
